--- a/instagram_project/instagram_app/pubspec.yaml
+++ b/instagram_project/instagram_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     path: ../instagram_share
   mongo_dart: ^0.10.0
   dart_jsonwebtoken: ^2.13.0
+  font_awesome_flutter: ^10.7.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -65,9 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - asset/image/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
