--- a/instagram_project/instagram_app/pubspec.yaml
+++ b/instagram_project/instagram_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   mongo_dart: ^0.10.0
   dart_jsonwebtoken: ^2.13.0
   font_awesome_flutter: ^10.7.0
+  google_fonts: ^6.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
